--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
             0% { text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc; }
             100% { text-shadow: 0 0 20px #00ffcc, 0 0 40px #00ffcc; }
         }
+.btn, #startBtn, #promoBtn, #levelSelectBtn, #addAttemptsBtn, #closePromoBtn, #submitPromoBtn, #playBtn, #closeAdminBtn, #easyBtn, #mediumBtn, #hardBtn, #submitPromoBtn, #closePromoBtn, #adminMenu button, #promoMenu button, #difficultyMenu button {
+    -webkit-tap-highlight-color: transparent;
+}
 
         #levelSelectBtn, #addAttemptsBtn, #closePromoBtn, #submitPromoBtn, #playBtn {
             margin: 10px;
